# FPSE-FinalProject

./: .gitignore  README.md  bisect003860538.coverage  bisect124282769.coverage  bisect263966841.coverage  bisect311017374.coverage  bisect314806440.coverage  bisect328156193.coverage  bisect436392388.coverage  bisect446702307.coverage  bisect455826001.coverage  bisect456029550.coverage  bisect658608380.coverage  bisect703605392.coverage  bisect708870851.coverage  bisect765245959.coverage  bisect890250487.coverage  bisect953974001.coverage  bisect985340159.coverage  dune-project  numerade.opam  package-lock.json  package.json
MLtest/: ExtractOneTestImageFromMnist.py  dune  example.ml  handwrittenImage.npy  handwrittenImage.npz  handwrittenImage.txt  heyo1  padtesting.ml  predict_conv.ml  predict_nn.ml  predict_only.ml  predict_using_linear.ml  predict_using_nn.ml  readfile.ml  test2.ml  train_conv.ml  train_nn.ml  weights
MLtest/_build/: .db  .digest-db  log
MLtest/_build/default/: example.ml  predict_only.ml  predict_using_linear.ml  readfile.cma  readfile.cmxa  readfile.cmxs  readfile.ml  test2.ml  testWithoutCore.ml
MLtest/_build/default/.dune/: configurator.v2
MLtest/_build/default/.example.eobjs/: dune__exe.ml-gen  example.ml.d  example.mli.d  readfile.ml.d  readfile.mli.d  test2.ml.d  test2.mli.d  testWithoutCore.ml.d  testWithoutCore.mli.d
MLtest/_build/default/.example.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__Example.cmi  dune__exe__Example.cmti  dune__exe__Readfile.cmi  dune__exe__Readfile.cmti  dune__exe__Test2.cmi  dune__exe__Test2.cmti  dune__exe__TestWithoutCore.cmi  dune__exe__TestWithoutCore.cmti
MLtest/_build/default/.example.eobjs/native/: dune__exe.cmx  dune__exe__Example.cmx  dune__exe__Readfile.cmx  dune__exe__Test2.cmx
MLtest/_build/default/.merlin-conf/: exe-example  exe-example-5b1d1eca8e205362eee2d209fcccaf21  exe-example-c18c261362cde66f40c9af70deb1f06a  exe-example-cdaa10c5477e802d802f9a7de3046da8  exe-predict_only  exe-predict_using_linear  exe-predict_using_nn  exe-testWithoutCore  lib-readfile
MLtest/_build/default/.predict_only.eobjs/byte/: dune__exe__Predict_only.cmi  dune__exe__Predict_only.cmti
MLtest/_build/default/.predict_only.eobjs/native/: dune__exe__Predict_only.cmx
MLtest/_build/default/.predict_using_linear.eobjs/byte/: dune__exe__Predict_using_linear.cmi  dune__exe__Predict_using_linear.cmti
MLtest/_build/default/.predict_using_linear.eobjs/native/: dune__exe__Predict_using_linear.cmx
MLtest/_build/default/.predict_using_nn.eobjs/byte/: dune__exe__Predict_using_nn.cmi  dune__exe__Predict_using_nn.cmti
MLtest/_build/default/.predict_using_nn.eobjs/native/: dune__exe__Predict_using_nn.cmx
MLtest/_build/default/.readfile.objs/byte/: readfile.cmi  readfile.cmo  readfile.cmt
MLtest/_build/default/.readfile.objs/native/: readfile.cmx
MLtest/_build/default/.testWithoutCore.eobjs/byte/: dune__exe__TestWithoutCore.cmi  dune__exe__TestWithoutCore.cmti
MLtest/_build/default/.testWithoutCore.eobjs/native/: dune__exe__TestWithoutCore.cmx
MLtest/_build/default/.utop/: utop.ml-gen
MLtest/_build/default/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmo  dune__exe__Utop.cmt
_build/: .db  .digest-db  log
_build/default/.dune/: configurator.v2
_build/default/.ppx/3aba1eda4deeeb3e7ff190bda4b5a4ad/: dune__exe___ppx.cmo
_build/default/.ppx/47e007fefa63695257b4d9874e3138b7/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/.ppx/6e1ef06872fc58faa7daa6d58cd1ddb6/: dune__exe___ppx.cmo
_build/default/.ppx/6fd25187b0e70872735b78e12e8bdfcf/: dune__exe___ppx.cmo
_build/default/.ppx/a50c520b45e6f141487684a37519fc7f/: dune__exe___ppx.cmo
_build/default/backend/: numerade.dune-package  numerade.install
_build/default/backend/src/: lib.cma  lib.cmxa  lib.cmxs  lib.ml  lib.pp.ml  lib.pp.mli  predict_conv.cma  predict_conv.cmxa  predict_conv.cmxs  predict_conv.pp.ml  readfile.cma  readfile.cmxa  readfile.cmxs  server.cma  (+3 more)
_coverage/: index.html
_coverage/backend/src/: extradigit.ml.html  operate.ml.html  predict_conv.ml.html  readfile.ml.html
_coverage/backend/tests/: tests.ml.html
backend/: .gitignore  bisect723969755.coverage  dune  dune-project  numerade.opam  server.ml
backend/_build/: .db  .digest-db  log
backend/_build/default/: numerade.dune-package  server.ml
backend/src/: DoubleDigit13.txt  ExtractMultipleDigit.py  ExtractOneTestImageFromMnist.py  bisect450990743.coverage  bisect489242674.coverage  bisect568106475.coverage  bisect618090512.coverage  dune  executabletester.ml  extradigit.ml  handwrittenImageOfFour.txt  lib.ml  lib.mli  multiple_digits_tester.ml  operate.ml  predict_conv.ml  readfile.ml  server.ml  train_conv.ml
backend/src/data/: bignumber.txt  bignumber2.txt
backend/tests/: dune  tests.ml
backend/tests/data/: 0000.txt  2287.txt  7519.txt
frontend/: README.md  bsconfig.json  index.html  package-lock.json  package.json
frontend/lib/bs/: .bsbuild  .bsdeps  .ninja_log  .sourcedirs.json  App.mlmap  Frontend.mlmap  Numerade.cmi  Numerade.mlmap  build.ninja  install.ninja
frontend/public/: index.html
frontend/src/: App.bs.js  App.css  App.js  App.res  NumberButton.bs.js  NumberButton.res  index.js
frontend/src/components/: DrawingTool.res  Header.res  PencilTool.res  PopupError.res  Swatch.res  TitleText.res  drawingtool.js  penciltool.js  swatch.js
frontend/src/pages/: Home.res  NotFound.res  Result.res
frontend/src/utils/: Type.res  Utils.res
lib/bs/: .bsbuild  .bsdeps  .ninja_log  .sourcedirs.json  App.cmi  App.mlmap  build.ninja  install.ninja
src/: NumberButton.res  dune  learning.mli  predict_conv.ml  server.ml  server.mli  strter.mli  train_conv.ml
src/_build/: .db  .digest-db  log
src/_build/default/: server.ml
src/_build/default/.dune/: configurator
src/_build/default/.merlin-conf/: exe-server
src/_build/default/.server.eobjs/byte/: dune__exe__Server.cmo  dune__exe__Server.cmti
src/_build/default/.server.eobjs/native/: dune__exe__Server.cmx
tests/: dune  handwrittenImageOfOne.txt  tests.ml
(+90 files in other folders)
