
(library
  (name readfile)
  (modules readfile)
  (libraries 
  torch npy core_unix core_unix.sys_unix))


(executable
  (name  predict_nn)
  (modules predict_nn)
  (libraries core torch npy core_unix core_unix.sys_unix readfile))

(executable
  (name train_nn)
  (modules train_nn)
  (libraries core torch npy core_unix core_unix.sys_unix readfile))

(executable
  (name train_conv)
  (modules train_conv)
  (libraries core torch npy core_unix core_unix.sys_unix readfile))

(executable
  (name predict_conv)
  (modules predict_conv)
  (libraries core torch npy core_unix core_unix.sys_unix readfile))

(executable
  (name padtesting)
  (modules padtesting)
  (libraries core torch npy core_unix core_unix.sys_unix readfile))
