
(library
 (name strter)
 (modules strter)
 (libraries
  core
  torch
  Torch_core
  cohttp-lwt-unix
  csv
  yojson
  ppx_deriving_yojson.runtime
  )
 (preprocess
  (pps ppx_deriving_yojson bisect_ppx)))

(executable
 (name app)
 (modules app)
 (libraries core lib dream)
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson)))