
  (library
  (name readfile)
  (modules readfile)
  (libraries 
  torch npy core_unix core_unix.sys_unix))

(executable
  (name train_conv)
  (modules train_conv)
  (libraries core torch npy core_unix core_unix.sys_unix readfile))

(executable
  (name executabletester)
  (modules executabletester)
  (libraries core torch npy core_unix core_unix.sys_unix readfile operate extradigit))


(library
  (name predict_conv)
  (modules predict_conv)
  (libraries core torch npy core_unix core_unix.sys_unix readfile)
  (preprocess (pps bisect_ppx))
  )

(library
(name operate)
(modules operate)
(libraries core torch npy core_unix core_unix.sys_unix readfile predict_conv extradigit)
(preprocess (pps bisect_ppx))
)

(library
  (name extradigit)
  (modules extradigit)
  (libraries core torch npy core_unix core_unix.sys_unix readfile)
  (preprocess (pps bisect_ppx))
  )
