
(library
 (name server)
 (modules server)
 (libraries
  core
  torch
  yojson
  operate
  ppx_deriving_yojson.runtime
  dream
  )
 (preprocess
  (pps ppx_deriving_yojson bisect_ppx)))

  (library
  (name readfile)
  (modules readfile)
  (libraries 
  torch npy core_unix core_unix.sys_unix))

(executable
  (name train_conv)
  (modules train_conv)
  (libraries core torch npy core_unix core_unix.sys_unix readfile))



(library
  (name predict_conv)
  (modules predict_conv)
  (libraries core torch npy core_unix core_unix.sys_unix readfile)
  (preprocess (pps bisect_ppx))
  )

(library
(name operate)
(modules operate)
(libraries core torch npy core_unix core_unix.sys_unix readfile predict_conv)
(preprocess (pps bisect_ppx))
)

(library
  (name extradigit)
  (modules extradigit)
  (libraries core torch npy core_unix core_unix.sys_unix readfile)
  (preprocess (pps bisect_ppx))
  )


(data_only_dirs lib node_modules)
